fix height bug on tablet, add prefixes for other browsers

--- a/src/components/AboutSection/AboutSection.module.scss
+++ b/src/components/AboutSection/AboutSection.module.scss
@@ -9,9 +9,6 @@
 	@include flexbox(column);
 	@include align-items(center);
 
-	@include breakpoint('xl') {
-		height: 100vh;
-	}
 	@include breakpoint('l') {
 		padding-right: pxToRem(40px);
 	}
@@ -64,13 +61,17 @@
 
 	.secondRow {
 		width: 100%;
-		height: 50%;
+		height: auto;
 		max-width: 1100px;
 		margin-top: pxToRem(140px);
+		display: -ms-grid;
 		display: grid;
 		justify-items: center;
+		-ms-grid-columns: 1fr 10px 1fr 10px 1fr;
 		grid-template-columns: 1fr 1fr 1fr;
 		row-gap: pxToRem(74px);
+		-webkit-column-gap: 10px;
+		-moz-column-gap: 10px;
 		column-gap: 10px;
 	}
 }
